# representation-learning-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
01_linear_regression/: 01_linear_regression.ipynb  01_loss_landscape.py  02_normal_equation.py  02_residuals_and_loss.ipynb  03_gradient_descent.py  03_minimising_loss.ipynb  04_gradient_descent.ipynb  04_gradient_descent.py  gradient_descent.py  loss_function.py  normal_equation.py  observations.py
02_auto_regression/: 01_ar1_sequence_to_regression.py  01_sequence_to_regression.py  02_ar1_normal_equation.py  03_ar1_gradient_descent.py  04_ar1_forecast.py  05_ar2_sequence_to_regression.py  06_ar2_normal_equation.py  07_ar2_gradient_descent.py  observed_data.py
course_utils/: loss_function.py  plots.py
